--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "json-web-token": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "rowdy-logger": "^1.0.2",
     "sequelize": "^6.6.2",
